ajout de la page d'inscription

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
 
 
-    <link rel="preload" href="./assets/images/hero-banner.png" as="image" />
+    <link rel="preload" href="./assets/images/Logo de construction Moderne Bleu.png" as="image" />
   </head>
 
   <body id="top">
@@ -79,6 +79,9 @@
             <li class="navbar-item">
               <a href="#" class="navbar-link">Contact</a>
             </li>
+            <li class="navbar-item">
+                <a href="inscription.html" class="navbar-link">inscription</a>
+              </li>
           </ul>
           </ul>
         </nav>
